name:                haskus-system-examples
version:             0.1.0.0
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
build-type:          Simple
cabal-version:       >=1.10

executable Build
   main-is: Build.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  process
      ,  shake

   default-language:    Haskell2010
   ghc-options:         -Wall -threaded

executable HelloWorld
   main-is: HelloWorld.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  haskus-system
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable Demo
   main-is: Demo.hs
   hs-source-dirs: src
   other-modules:
      Demo.Diagrams
      Demo.Graphics
   build-depends:
         base >=4.8
      ,  bytestring
      ,  haskus-system
      ,  haskus-utils
      ,  haskus-binary
      ,  transformers
      ,  JuicyPixels
      ,  diagrams-lib
      ,  containers
      ,  colour
   default-language:    Haskell2010
   ghc-options: -Wall -O3 -static -threaded
   cc-options: -static -O3
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable Test
   main-is: Test.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  bytestring
      ,  haskus-system
      ,  haskus-binary
      ,  haskus-utils
      ,  transformers
      ,  either
      ,  JuicyPixels
      ,  stm
      ,  colour
   default-language:    Haskell2010
   ghc-options: -Wall -O3 -static -threaded
   cc-options: -static -O3
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable Clock
   main-is: Clock.hs
   hs-source-dirs: src
   other-modules: Clock.Render
   build-depends:
         base           >=4.8
      ,  bytestring
      ,  haskus-system
      ,  haskus-utils
      ,  haskus-binary
      ,  JuicyPixels
      ,  stm
      ,  lens
   default-language:    Haskell2010
   ghc-options: -Wall -O3 -static -threaded
   cc-options: -static -O3
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable VDSO
   main-is: VDSO.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  haskus-system
      ,  haskus-binary
      ,  haskus-utils
      ,  text
      ,  vector
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable KernelEvent
   main-is: KernelEvent.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  haskus-system
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable  OpenDevice
   main-is: OpenDevice.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  haskus-system
      ,  haskus-binary
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable  ListDevices
   main-is: ListDevices.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  stm
      ,  haskus-system
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable  DisplayProperties
   main-is: DisplayProperties.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  haskus-system
      ,  haskus-utils
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable  DisplayState
   main-is: DisplayState.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  haskus-system
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable  DisplayModes
   main-is: DisplayModes.hs
   hs-source-dirs: src
   build-depends:
         base >=4.8
      ,  haskus-system
      ,  haskus-utils
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib

executable  Sound
   main-is: Sound.hs
   hs-source-dirs: src
   build-depends:
         base
      ,  haskus-system
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./usr/lib
