name:                haskus-system-build
version:             1.1
synopsis:            Haskus system build tool
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org/system
copyright:           Sylvain Henry 2018
category:            System
build-type:          Simple
cabal-version:       1.20

description:
   Build tool to use with haskus-system.

source-repository head
  type: git
  location: git://github.com/haskus/haskus-system-build.git

executable haskus-system-build
   main-is: Haskus/Apps/System/Build/Main.hs
   hs-source-dirs: src/apps
   other-modules:
      Haskus.Apps.System.Build.Config
      Haskus.Apps.System.Build.Linux
      Haskus.Apps.System.Build.Ramdisk
      Haskus.Apps.System.Build.Syslinux
      Haskus.Apps.System.Build.Stack
      Haskus.Apps.System.Build.CmdLine
      Haskus.Apps.System.Build.Utils
      Haskus.Apps.System.Build.GMP
      Haskus.Apps.System.Build.QEMU
      Haskus.Apps.System.Build.ISO
      Haskus.Apps.System.Build.Disk
      Haskus.Apps.System.Build.Download
      Paths_haskus_system_build
   build-depends:
         base                    >= 4.9 && < 5.0
      ,  process                 >= 1.4
      ,  yaml                    >= 0.8
      ,  text                    >= 1.2
      ,  haskus-utils            >= 0.7
      ,  optparse-simple         >= 0.0
      ,  optparse-applicative    >= 0.13
      ,  temporary               >= 1.2
      ,  directory               >= 1.2
      ,  filepath                >= 1.4
      ,  hashable                >= 1.2
      ,  http-conduit
      ,  conduit

   default-language:    Haskell2010
   ghc-options:         -Wall -threaded
